# zmq-proxy

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-all.yml  main.yml
cmake/toolchains/: armv7l-toolchain.cmake  mips-toolchain.cmake
package/luci-zmq-proxy/files/www/luci-static/resources/view/: zmq-proxy.js
package/zmq-proxy/files/etc/config/: zmq-proxy
package/zmq-proxy/files/etc/init.d/: zmq-proxy
scripts/: build-base.sh  build-luci.sh
src/: .#test.c  zmq-proxy.cpp
